# nodec_game_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_jp.md
game_editor/: CMakeLists.txt
game_editor/resources/org.nodec.game-editor/materials/: gizmo-wire.material
game_editor/resources/org.nodec.game-editor/meshes/: wire-cube.mesh  wire-sphere.mesh
game_editor/resources/org.nodec.game-editor/shaders/gizmo-wire/: interface.hlsl  pixel.cso  pixel.hlsl  vertex.cso  vertex.hlsl
game_editor/targets/windows/main/: CMakeLists.txt
game_editor/targets/windows/main/src/: Application.hpp  Editor.cpp  Editor.hpp  ResourceExporter.cpp  ResourceExporter.hpp  editor.cpp  editor.hpp  editor_gui.hpp  resource_exporter.hpp  scene_gizmo_impl.hpp  scene_gizmo_renderer.cpp  scene_gizmo_renderer.hpp
game_editor/targets/windows/main/src/EditorWindows/: SceneSerializationWindow.hpp  SceneViewWindow.cpp  SceneViewWindow.hpp
game_editor/targets/windows/main/src/InspectorGUI/: InspectorGUI.cpp  InspectorGUI.hpp
game_editor/targets/windows/main/src/component_editors/: animator_editor.hpp  audio_listener_editor.hpp  audio_source_editor.hpp  camera_editor.hpp  collision_filter_editor.hpp  directional_light_editor.hpp  image_renderer_editor.hpp  local_transform_editor.hpp  mesh_renderer_editor.hpp  name_editor.hpp  non_visible_editor.hpp  physics_shape_editor.cpp  physics_shape_editor.hpp  point_light_editor.hpp  post_processing_editor.hpp  prefab_editor.cpp  prefab_editor.hpp  rigid_body_editor.hpp  scene_lighting_editor.hpp  text_renderer_editor.hpp
game_editor/targets/windows/main/src/components/: gizmo_wire.hpp
game_editor/targets/windows/main/src/editor_windows/: asset_import_window.hpp  control_window.hpp  entity_inspector_window.cpp  entity_inspector_window.hpp  geometry_buffer_inspector_window.cpp  geometry_buffer_inspector_window.hpp  log_window.hpp  material_editor_window.cpp  material_editor_window.hpp  scene_hierarchy_window.cpp  scene_hierarchy_window.hpp  scene_view_window.cpp  scene_view_window.hpp
game_engine/: CMakeLists.txt
game_engine/resources/: README.md
game_engine/resources/org.nodec.game-engine/materials/: image-default.material  pbr-default.material  pbr-defer-default.material
game_engine/resources/org.nodec.game-engine/materials/post-processings/: bloom.material  fog-default.material  hdr-default.material  hdr.material  ssao.material  ssr-default.material
game_engine/resources/org.nodec.game-engine/meshes/: cone.mesh  cylinder.mesh  norm-cube.mesh  sphere.mesh
game_engine/resources/org.nodec.game-engine/shaders/common/: interface_model.hlsl  interface_scene.hlsl
game_engine/resources/org.nodec.game-engine/shaders/image/: interface.hlsl  main_ps.cso  main_ps.hlsl  main_vs.cso  main_vs.hlsl  pixel.cso  pixel.hlsl  vertex.cso
game_engine/resources/org.nodec.game-engine/shaders/pbr/: pixel.cso  vertex.cso
game_engine/resources/org.nodec.game-engine/shaders/pbr-defer/: geometry_interface.hlsl  geometry_ps.cso  geometry_ps.hlsl  geometry_vs.cso  lighting_ps.cso  lighting_ps.hlsl  lighting_vs.cso
game_engine/resources/org.nodec.game-engine/shaders/post-processings/bloom/: blend_ps.cso  blend_vs.cso  blur_h_ps.cso  blur_h_vs.cso  blur_v_ps.cso  blur_v_vs.cso  brightness_ps.cso  brightness_vs.cso
game_engine/resources/org.nodec.game-engine/shaders/post-processings/fog/: fog_interface.hlsl  fog_ps.cso  fog_ps.hlsl  fog_vs.cso  fog_vs.hlsl
game_engine/resources/org.nodec.game-engine/shaders/post-processings/hdr/: hdr_ps.cso  hdr_vs.cso
game_engine/resources/org.nodec.game-engine/shaders/post-processings/ssao/: occlusion_ps.cso  occlusion_ps.hlsl  occlusion_vs.cso
game_engine/resources/org.nodec.game-engine/shaders/post-processings/ssr/: box_blur_interface.hlsl  box_blur_ps.cso  box_blur_ps.hlsl  box_blur_vs.hlsl  combine_interface.hlsl  combine_ps.cso  combine_ps.hlsl  combine_vs.hlsl  interface.hlsl  reflection_color_interface.hlsl  reflection_color_ps.cso  reflection_color_ps.hlsl  reflection_color_vs.hlsl  reflection_uv_interface.hlsl  reflection_uv_ps.cso  reflection_uv_ps.hlsl  reflection_uv_vs.hlsl
game_engine/resources/org.nodec.game-engine/shaders/skybox/panoramic/: interface.hlsl  pixel.cso  pixel.hlsl  vertex.cso  vertex.hlsl
game_engine/targets/windows/core/: CMakeLists.txt
game_engine/targets/windows/core/include/: Engine.hpp  Logging.hpp  ScreenHandler.hpp  WinDesktopApplication.hpp  Window.hpp  engine.hpp  window.hpp
game_engine/targets/windows/core/include/Audio/: AudioPlatform.hpp  SouceVoice.hpp
game_engine/targets/windows/core/include/Font/: FontCharacterDatabase.hpp  FontTexture.hpp
game_engine/targets/windows/core/include/Graphics/: BlendState.hpp  ConstantBuffer.hpp  DxgiInfoLogger.hpp  GeometryBuffer.hpp  Graphics.hpp  IndexBuffer.hpp  InputLayout.hpp  PixelShader.hpp  RasterizerState.hpp  SamplerState.hpp  VertexBuffer.hpp  VertexShader.hpp  geometry_buffer.hpp  graphics.hpp
game_engine/targets/windows/core/include/Physics/: PhysicsSystemBackend.hpp  RigidBodyActivity.hpp  RigidBodyBackend.hpp  RigidBodyMotionState.hpp
game_engine/targets/windows/core/include/Rendering/: ImageTexture.hpp  MaterialBackend.hpp  MeshBackend.hpp  SceneRenderer.hpp  ShaderBackend.hpp  TextureBackend.hpp  cb_model_properties.hpp  cb_scene_properties.hpp  cb_texture_config.hpp  image_texture.hpp  scene_renderer.hpp  scene_rendering_context.hpp  shader_backend.hpp  texture_backend.hpp
game_engine/targets/windows/core/include/Resources/: ResourceLoader.hpp  ResourcesModuleBackend.hpp
game_engine/targets/windows/core/include/SceneAudio/: SceneAudioSystem.hpp
game_engine/targets/windows/core/include/SceneSerialization/: SceneSerializationBackend.hpp  SceneSerializationModuleBackend.hpp
game_engine/targets/windows/core/include/audio/: audio_platform.hpp  source_voice.hpp
game_engine/targets/windows/core/src/: Engine.cpp  Logging.cpp  Window.cpp  engine.cpp  logging.cpp  window.cpp
game_engine/targets/windows/main/: CMakeLists.txt
game_engine/targets/windows/main/src/: Application.cpp  application.hpp  win_main.cpp
(+59 files in other folders)
